--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,15 +9,13 @@
 
     <ImageView
         android:id="@+id/logo_splash"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="193dp"
+        android:layout_height="266dp"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:transitionName="logo_image"
         android:src="@drawable/logo_splash"
+        android:transitionName="logo_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,12 +24,12 @@
         android:id="@+id/logo_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bangers"
+        android:fontFamily="@font/montserrat_bold"
         android:gravity="center_horizontal"
         android:text="Tagpay Social"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="60sp"
+        android:textSize="45sp"
         android:transitionName="logo_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,7 +40,6 @@
         android:id="@+id/slogan_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/antic"
         android:gravity="center_horizontal"
         android:text="Social payments app for agents"
         android:textAlignment="center"
